--- a/client/index.html
+++ b/client/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>robomonkey &middot; chat</title>
-        <link href="/client/style.css" rel="stylesheet"/>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/client/lib/jquery.js"></script>
-        <script src="/common/handlebars.js"></script>
-        <script src="/common/models.js"></script>
-        <script src="/varSocketURI.js"></script>
-        <script src="/client/code.js"></script>
-        <script id="message-template" type="text/x-handlebars-template">
-<li class='message {{type}}'>
-    ({{user.name}}): {{message}}
-</li>
-        </script>
-        <script id="userlist-template" type="text/x-handlebars-template">
-{{#each users}}
-<li>{{name}}</li>
-{{/each}}
-        </script>
-    </head>
-    <body>
-        <header id="header">
-            <h1>robomonkey</h1>
-        </header>
-        <main id="main">
-            <form id="status-update-form" action="javascript:void(0);" novalidate="novalidate">
-                <div>
-                    <input type="text" pattern="[a-zA-Z0-9]+[a-zA-Z0-9\s]+" required autofocus placeholder="Hit return to send..."/>
-                    <button type="button">Leave</button>
-                </div>
-            </form>
-            <section id="messages">
-                <h2>Messages</h2>
-                <ul></ul>
-            </section>
-            <aside id="users">
-                <h2>Online</h2>
-                <ul></ul>
-            </aside>
-        </main>
-    </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"/><title>robomonkey &middot; chat</title><link href="/client/style.css" rel="stylesheet"/><script src="/socket.io/socket.io.js"></script><script src="/client/lib/jquery.js"></script><script src="/common/handlebars.js"></script><script src="/common/models.js"></script><script src="/varSocketURI.js"></script><script src="/client/code.js"></script><script id="message-template" type="text/x-handlebars-template"><li class='message {{type}}'>({{user.name}}): {{message}}</li></script><script id="userlist-template" type="text/x-handlebars-template">{{#each users}}<li>{{name}}</li>{{/each}}</script></head><body><div id="header"><h1>robomonkey</h1></div><div id="main"><form id="status-update-form" action="javascript:void(0);" novalidate="novalidate"><div><input type="text" pattern="[a-zA-Z0-9]+[a-zA-Z0-9\s]+" required autofocus placeholder="Hit return to send..."/><button type="button">Leave</button></div></form><div id="messages"><h2>Messages</h2><ul></ul></div><div id="users"><h2>Online</h2><ul></ul></div></div></body></html>
